<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FishMarker</string>

    //////////////////////////////////REGISTRATION

    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="Location">Country</string>
    <string name="location">country</string>
    <string name="Dont_have">Dont have account, create</string>
    <string name="Register">Registration</string>
    <string name="empty_name">empty name</string>
    <string name="empty_email">empty email</string>
    <string name="not_valid_email">not valid email</string>
    <string name="not_valid_password">not valid password</string>
    <string name="empty_email_or_password">email or password is empty</string>
    <string name="requirementsy">does not meet the requirementsy</string>
    <string name="autorithation">Autorithation error, login or password not true</string>
    <string name="successfully">successfully logged in</string>
    <string name="verify">please verify your account on email</string>
    <string name="sent">password sent to your email</string>
    <string name="valid">"not valid data</string>
    <string name="password_empty">password empty</string>
    <string name="password_not_valid">password not valid</string>
    <string name="check">please check email</string>
    <string name="password_requirements">Password requirements:</string>
    <string name="requirements">1)At least 8 chars\n2)Digit must occur at least once\n3)A lower case letter must occur at least once\n4)An upper case letter must occur at least once\n5)No whitespace allowed in the entire string</string>
    <string name="sent_pass">Send my Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="not_valid_name">not valid name</string>
    <string name="registration">Registration</string>
    <string name="registration_big">REGISTRATION</string>
    <string name="places">Places</string>
    <string name="markers">Markers</string>
    <string name="add_marker_activity">Add marker</string>
    <string name="water_object">Water object</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_activity">Sign In</string>
    <string name="add_places">Add place</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="auth_cancel">Cancel</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_user_place">Here could be your water features.
    To add an object, click on the drop and select an object.
    Specify the middle of the water body using and set the zoom.
    Anchor to the right place.</string>

    <string name="date">Date</string>
    <string name="depth">0.00</string>
    <string name="Depth">Depth(meter)</string>
    <string name="Number">Amount of fish</string>
    <string name="number">integer</string>
    <string name="Note">Note</string>
    <string name="note">note</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="selectdate">SELECT DATE</string>
    <string name="titlemarker">Title marker</string>
    <string name="titlemarker2">20 symbols</string>

    ///////////////////////////////////////////////////////MENU

    <string name="back">back</string>
    <string name="add">add</string>
    <string name="recycler">Recycler</string>
    <string name="information">Information</string>

    ///////////////////////////////////////////////////////

    <string name="latlng">Latitude/Longitude</string>
    <string name="base">Base empty</string>

    ///////////////////////////////////////////////////////Сomplete marker information

    <string name="complete_c">Detail marker information</string>
    <string name="lat_c">Latitude: </string>
    <string name="lon_c">Longitude: </string>
    <string name="tit_c">Title marker: </string>
    <string name="date_c">Date: </string>
    <string name="depth_c">Depth: </string>
    <string name="amount_c">Amount: </string>
    <string name="note_c">Note: </string>
    <string name="fill">Fill in all the fields</string>
    <string name="unique">Marker exist</string>


    ///////facebook_api
    <string name="facebook_app_id">570833563489623</string>
    <string name="fb_login_protocol_scheme">fb570833563489623</string>
    <string name="foreign_markers">You can not edit or delete foreign markers</string>
    <string name="detail_marker_title_alert">Markers details</string>

    ///////////////////////////////////////////////////////

    <string name="you">You really want to delete the marker?</string>
    <string name="the">The marker will be removed </string>
    <string name="from">"from the database and from the map"</string>
    <string name="gps_enable">GPS is not enabled. Please turn ON GPS.</string>
    <string name="gps_settings">GPS settings</string>
    <string name="settings">Settings</string>

    //////////////////////////big water
    <string name="sea">SEA</string>
    <string name="ocean">OCEAN</string>
    <string name="river">RIVER</string>
    <string name="lake">LAKE</string>
    <string name="gulf">GULF</string>
    <string name="reservoir">RESERVOIR</string>
    <string name="lade">LADE</string>
    <string name="pond">POND</string>
    <string name="another">ANOTHER</string>

    //////////////////////////profile
    <string name="telephone">Telephone</string>
    <string name="last_name">Last Name</string>
    <string name="type_of_fishing">Type of fishing</string>
    <string name="trophies">Trophies</string>
    <string name="change_data">Change data</string>
    <string name="SAVE">SAVE</string>
    <string name="change_photo">change photo</string>
    <string name="fishmarker">Fishmarker</string>
    <string name="add_marker">Add marker</string>
    <string name="profile">Profile</string>
    <string name="navigation">Navigation</string>
    <string name="name_place">Name place:</string>
    <string name="zoom">Zoom:</string>
    <string name="my_places">My Places</string>
    <string name="marker">Markers</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>

    //////////////////////////add place dialog
    <string name="add_place">Add place? The point center you select will be added with lat and lon coordinates, with the name you specify</string>
    <string name="nameplace">Name place</string>
    <string name="nameplacel">name place</string>
    <string name="zoom_add">Zoom</string>
    <string name="big_water">Big water</string>
    <string name="big_water_l">big water</string>

    //////////////////////////add marker dialog
    <string name="add_marker_on_map">Add marker on map</string>
    <string name="add_marker_s">Are you seriosly want add marker?</string>
    <string name="go_go">Go, go , go add marker</string>
    <string name="agree">You are not agree</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    ///////////////exit app
    <string name="exit_title">You seriosly want exit?</string>
    <string name="exit_text"> Now you exit the application and you will need to login to the new</string>
    <string name="owner">Owner</string>

    //////////////Spinner

    <string-array name="bait_array" tools:ignore="InconsistentArrays">
        <item>Красный червь</item>
        <item>Черный червь</item>
        <item>Морской червь</item>
        <item>Опарыш (белый)</item>
        <item>Опарыш (красный)</item>
        <item>Мотыль</item>
        <item>Горох</item>
        <item>Кукуруза</item>
        <item>Личинка майского жука</item>
        <item>Личинка ручейника</item>
        <item>Казара</item>
        <item>Муха</item>
        <item>Короед</item>
        <item>Живец</item>
        <item>Силикон</item>
        <item>Блесна</item>
        <item>Вертушка</item>
        <item>Воблер</item>
        <item>Мушка</item>
        <item>Другое</item>
    </string-array>

<!--
    <string-array name="bait_array">
        <item>Red Worm</item>
        <item>Black Worm </item>
        <item>Sea worm</item>
        <item>Maggot (white)</item>
        <item>Maggot (red)</item>
        <item>Bloodworm </item>
        <item>Peas</item>
        <item>Corn</item>
        <item>Maybug larva</item>
        <item>Caddis larva</item>
        <item>Cazar</item>
        <item>Fly</item>
        <item>Bark beetle</item>
        <item>Live bait</item>
        <item>Silicone</item>
        <item>Spinner</item>
        <item>Pinwheel</item>
        <item>Wobbler</item>
        <item>Muzzle Sight</item>
        <item>Another</item>

    </string-array>-->


    <string name="bait_l">Bait</string>
    <string name="bait">bait</string>
    <string name="not_found">Not Found!</string>
    <string name="type_to_search">Type to Search</string>






</resources>
