<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!---BLOCK 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/latlng" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_latitude"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/latitude"
                    android:inputType="textCapWords"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/edit_longitude"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/longitude"
                    android:inputType="textCapWords"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>



        <!---BLOCK 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/titlemarker" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_title_marker"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/titlemarker2"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZАаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя"
                    android:maxLength="20"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:autofillHints="" />


            </LinearLayout>
        </LinearLayout>



        <!---BLOCK 3-->
        <LinearLayout
            android:id="@+id/container_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/date" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:layout_height="48dp"
                    android:paddingLeft="6dp"
                    android:hint="@string/selectdate" />

            </LinearLayout>
        </LinearLayout>


        <!---BLOCK 4-->
        <LinearLayout
            android:id="@+id/container_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Depth" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_dept"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/depth"
                    android:digits="0123456789."
                    android:inputType="number"
                    android:maxLength="5"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:autofillHints="" />

            </RelativeLayout>
        </LinearLayout>


        <!---BLOCK 5-->

        <LinearLayout
            android:id="@+id/container_number_of_fish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Number" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_number_of_fish"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/number"
                    android:maxLength="6"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:autofillHints="" />

            </RelativeLayout>
        </LinearLayout>


        <!---BLOCK 6-->
        <LinearLayout
            android:id="@+id/container_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Note"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_note"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/note"
                    android:maxLength="100"
                    android:autofillHints=""/>

            </RelativeLayout>
        </LinearLayout>


        <!---BLOCK 7-->


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="100dp"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:text="@string/ok"/>

        </FrameLayout>


    </LinearLayout>


</ScrollView>
