<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:padding="@dimen/activity_horizontal_margin"
    android:scrollbarThumbVertical="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="30dp"
            android:background="@color/colorTransparent"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/delete_marker_30"/>
    </RelativeLayout>

        <!---BLOCK 1-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/latlng"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_latitude"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/latitude"
                    android:inputType="textCapWords"
                    android:autofillHints=""/>
                <EditText
                    android:id="@+id/edit_longitude"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/longitude"
                    android:inputType="textCapWords"
                    android:autofillHints=""/>
            </LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/titlemarker" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_title_marker"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/titlemarker2"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZАаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя"
                    android:maxLength="20"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:autofillHints="" />


            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/container_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/date" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:layout_height="48dp"
                    android:paddingLeft="6dp"
                    android:hint="@string/selectdate" />

            </LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:id="@+id/container_bait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/bait_l" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <com.company.imetlin.fishmarker.customview.spinner.MultiSpinner
                    android:id="@+id/simpleMultiSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:hintText="Multi Selection"/>

                <com.company.imetlin.fishmarker.customview.spinner.MultiSpinnerSearch
                    android:id="@+id/searchMultiSpinnerUnlimited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintText="@string/bait" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:id="@+id/container_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Depth" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_dept"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/depth"
                    android:digits="0123456789."
                    android:inputType="number"
                    android:maxLength="5"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:autofillHints="" />

            </RelativeLayout>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/container_number_of_fish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Number" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_number_of_fish"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/number"
                    android:maxLength="6"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:autofillHints="" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/Note"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_note"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/note"
                    android:maxLength="100"
                    android:autofillHints=""/>

            </RelativeLayout>
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="100dp"
                android:background="@color/colorPrimary"
                android:layout_height="40dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:text="@string/ok"/>
        </FrameLayout>


    </LinearLayout>



</androidx.core.widget.NestedScrollView>
