<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/activity_authentication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/offset_32"
        android:paddingBottom="@dimen/offset_32">

       <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/web_fish"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_40"
                android:layout_marginTop="@dimen/offset_12"
                android:layout_marginBottom="@dimen/offset_4"
                android:text="@string/Email"
                android:textSize="@dimen/headline_5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLoginEmail"
                style="@style/TextInputLayout"
                android:layout_marginStart="@dimen/offset_32"
                android:layout_marginEnd="@dimen/offset_32"
                android:layout_marginBottom="@dimen/offset_16"
                android:elevation="@dimen/offset_4"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEtLoginEmail"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_12"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_40"
                android:layout_marginBottom="@dimen/offset_4"
                android:text="@string/Password"
                android:textSize="@dimen/headline_5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLoginPassword"
                style="@style/TextInputLayout"
                android:layout_marginStart="@dimen/offset_32"
                android:layout_marginEnd="@dimen/offset_32"
                android:layout_marginBottom="@dimen/offset_16"
                android:elevation="@dimen/offset_4"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGreyLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiEtLoginPassword"
                    style="@style/EditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.company.imetlin.fishmarker.widgets.LoadingButton
            android:id="@+id/btnLoginMainLogin"
            style="@style/ButtonPrimary"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/offset_12"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/offset_10"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/offset_10"
            android:text="@string/forgot"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/headline_5"/>

        <TextView
            android:layout_marginTop="@dimen/offset_10"
            android:id="@+id/btnLoginMainRegistration"
            style="@style/TextButtonTranslucent"
            android:text="@string/registration" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
